--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -66,9 +66,7 @@
     "print(df)\n",
     "\n",
     "\n",
-    "print(\"EX3\")\n",
-    "print(df.iloc[0:10])\n",
-    "print(\"EX4\")\n"
+    "\n"
    ]
   },
   {
@@ -109,13 +107,7 @@
      ]
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "color=[\"pink\", \"white\", \"black\", \"blue\"]\n",
-    "occurence = [20, 15, 6, 43]\n",
-    "S=pd.Series(occurence, index=color)\n",
-    "print(S)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -241,10 +233,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "e7dabfc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EX5\n",
+      "        name   score qualify\n",
+      "a  Anastasia    12.5     yes\n",
+      "b       Dima       9      no\n",
+      "c  Katherine    16.5     yes\n",
+      "d      James  np.nan      no\n",
+      "e      Emily       9      no\n",
+      "f    Michael      20     yes\n",
+      "g    Matthew    14.5     yes\n",
+      "h      Laura  np.nan      no\n",
+      "i      Kevin       8      no\n",
+      "j      Jonas      19     yes\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "l= [['Anastasia',12.5,1,\"yes\"], ['Dima',9,1,\"no\"], ['Katherine',16.5,2,\"yes\"], \n",
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "id": "4d8ce081",
    "metadata": {},
    "outputs": [
@@ -286,7 +297,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 0, 0, 1, 1, 0, 0, 1]\n",
       "EX6\n",
       "        name   score  attempts qualify  Success\n",
       "a  Anastasia    12.5         1     yes        1\n",
@@ -318,7 +328,7 @@
     "    else:\n",
     "        s=0\n",
     "    la.append(s)\n",
-    "print(la)\n",
+    "\n",
     "print(\"EX6\")\n",
     "df=pd.DataFrame(l, columns =[\"name\",\"score\",\"attempts\",\"qualify\"],index = ['a','b','c','d','e','f','g','h','i','j'])\n",
     "df[\"Success\"]=la\n",
@@ -329,14 +339,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "e0b31b4c",
+   "execution_count": 93,
+   "id": "373a527b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "EX7\n",
       "    Unnamed: 0       name   score  attempts qualify  Success\n",
       "0            0  Anastasia    12.5         1     yes        1\n",
       "1            1       Dima       9         3      no        0\n",
@@ -362,6 +373,7 @@
     "\n",
     "'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes',\"yes\"],'Success':[1, 0, 1, 0, 0, 1, 1, 0, 0, 1,1]\n",
     "       }\n",
+    "print(\"EX7\")\n",
     "df=pd.DataFrame(dict1)\n",
     "df.to_csv('k')\n",
     "my_data=pd.read_csv('k')\n",
@@ -371,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "513042d2",
+   "id": "a7031cac",
    "metadata": {},
    "outputs": [],
    "source": []
